testdata/parser/ok/BlockComments1.java
/* good comment */

/** good comment */

/*/ good comment */

/*/ good comment /*/

/*
 * comment /*
 */

/*/
 * comment /*
 */

/*  // wuff */

/* ** */

/*
/** *  / / * // /* 
 */

/*****/

/**/

/** **/

/*
*/

/**
*/
int main() {
		
		return 0;
}