testdata/parser/error/BadBlockComments1.java
/* unclosed comment * /
int main() {
		
		return 0;
}